# ML_Ops-training

./: app.py  requirements.txt
Docker_Task_1/: Dockerfile  README.md  pyproject.toml  taks.txt
