[tool.poetry]
name = "ML-Ops practice"
version = "0.1.0"
description = "Тренировка по ML-Ops курсу"
authors = ["John Smith <john@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.15.0"
ruff = "^0.0.252"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

package-mode = false